--- a/cloud_resources/broker/Dockerfile
+++ b/cloud_resources/broker/Dockerfile
@@ -1,9 +1,7 @@
 FROM alpine:latest
 RUN apk update
 RUN apk add mosquitto
-EXPOSE 1883
-
-# Configure to allow remote access
 RUN echo "allow_anonymous true" > /etc/mosquitto/mosquitto.conf
 RUN echo "listener 1883 0.0.0.0" >> /etc/mosquitto/mosquitto.conf
-CMD ["mosquitto", "-c", "/etc/mosquitto/mosquitto.conf"]
+# Configure to allow remote access
+CMD ["mosquitto", "-v","-c","/etc/mosquitto/mosquitto.conf"]
