--- a/edge_resources/logger/face_logger_deploy.yaml
+++ b/edge_resources/logger/face_logger_deploy.yaml
@@ -14,11 +14,9 @@ spec:
     spec:
       containers:
       - name: forwarder
-        image: ncpaxton01/myforwarder:latest
+        image: ncpaxton01/forwarder:latest
       - name: mylogger
         image: ncpaxton01/mylogger:latest
-      - name: mydetector
-        image: ncpaxton01/mydetector:latest
         securityContext: 
           privileged: true
         volumeMounts:
